--- a/surrogateML.ipynb
+++ b/surrogateML.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "6a820cc8",
    "metadata": {},
    "outputs": [],
@@ -755,7 +755,265 @@
    "id": "0b79eed4",
    "metadata": {},
    "source": [
-    "# 2. Modeling (?)"
+    "# 2. Experiments (?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e066244",
+   "metadata": {},
+   "source": [
+    "Try 1. Drop False values for machine running and keep the rest for datarobot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "01bde33f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 3741 rows to: influxDB Backup/saw_wide_maschineRunning_true.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "in_file = \"influxDB Backup/saw_wide.csv\"\n",
+    "out_file = \"influxDB Backup/saw_wide_maschineRunning_true.csv\"\n",
+    "\n",
+    "df = pd.read_csv(in_file)\n",
+    "\n",
+    "# machineRunning can be bool, \"True\"/\"False\" strings, 1/0, or NaN\n",
+    "mr = df[\"machineRunning\"]\n",
+    "\n",
+    "mask_true = (\n",
+    "    (mr == True) |\n",
+    "    (mr.astype(str).str.strip().str.lower() == \"true\") |\n",
+    "    (pd.to_numeric(mr, errors=\"coerce\") == 1)\n",
+    ")\n",
+    "\n",
+    "df[mask_true].to_csv(out_file, index=False)\n",
+    "\n",
+    "print(f\"Saved {mask_true.sum()} rows to: {out_file}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a714d7d1",
+   "metadata": {},
+   "source": [
+    "Join of columns \"experiment No\", \"Piece No\" and \"Material\" to the dataset saw_wide_maschineRunning_true for time series identifecation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f8e96d09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>bandVelocityActual</th>\n",
+       "      <th>currentRMS</th>\n",
+       "      <th>feedRateActual</th>\n",
+       "      <th>machineRunning</th>\n",
+       "      <th>microphoneRMS</th>\n",
+       "      <th>temperatureRMS</th>\n",
+       "      <th>vibrationRMS</th>\n",
+       "      <th>Experiment No</th>\n",
+       "      <th>Piece No</th>\n",
+       "      <th>Material</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-12-12 14:49:43</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.886779</td>\n",
+       "      <td>390</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.074864</td>\n",
+       "      <td>24.348553</td>\n",
+       "      <td>3.503168</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Empty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-12-12 14:49:44</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.838384</td>\n",
+       "      <td>390</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.084009</td>\n",
+       "      <td>24.357191</td>\n",
+       "      <td>4.272558</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Empty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-12-12 14:49:45</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.876621</td>\n",
+       "      <td>390</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.086972</td>\n",
+       "      <td>24.344240</td>\n",
+       "      <td>3.908590</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Empty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-12-12 14:49:46</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.960319</td>\n",
+       "      <td>390</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.072588</td>\n",
+       "      <td>24.345861</td>\n",
+       "      <td>2.589309</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Empty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-12-12 14:49:47</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1.120628</td>\n",
+       "      <td>390</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.082789</td>\n",
+       "      <td>24.327732</td>\n",
+       "      <td>2.690249</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Empty</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 time  bandVelocityActual  currentRMS  feedRateActual  \\\n",
+       "0 2025-12-12 14:49:43                   2    0.886779             390   \n",
+       "1 2025-12-12 14:49:44                  41    0.838384             390   \n",
+       "2 2025-12-12 14:49:45                  41    0.876621             390   \n",
+       "3 2025-12-12 14:49:46                  41    0.960319             390   \n",
+       "4 2025-12-12 14:49:47                  41    1.120628             390   \n",
+       "\n",
+       "   machineRunning  microphoneRMS  temperatureRMS  vibrationRMS  Experiment No  \\\n",
+       "0            True       0.074864       24.348553      3.503168             -1   \n",
+       "1            True       0.084009       24.357191      4.272558             -1   \n",
+       "2            True       0.086972       24.344240      3.908590             -1   \n",
+       "3            True       0.072588       24.345861      2.589309             -1   \n",
+       "4            True       0.082789       24.327732      2.690249             -1   \n",
+       "\n",
+       "   Piece No Material  \n",
+       "0        -1    Empty  \n",
+       "1        -1    Empty  \n",
+       "2        -1    Empty  \n",
+       "3        -1    Empty  \n",
+       "4        -1    Empty  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# paths\n",
+    "exp_path = \"Experiments Band Saw 12.12 simplified.xlsx\"\n",
+    "saw_path = \"influxDB Backup/saw_wide_maschineRunning_true.csv\"\n",
+    "out_path = \"influxDB Backup/saw_wide_maschineRunning_true_joined.csv\"\n",
+    "\n",
+    "# load\n",
+    "exp = pd.read_excel(exp_path)\n",
+    "saw = pd.read_csv(saw_path)\n",
+    "\n",
+    "# tidy column names\n",
+    "exp.columns = exp.columns.str.strip()\n",
+    "saw.columns = saw.columns.str.strip()\n",
+    "\n",
+    "# parse saw time (full datetime)\n",
+    "saw[\"time\"] = pd.to_datetime(saw[\"time\"], errors=\"coerce\")\n",
+    "\n",
+    "# Excel has only HH:MM:SS -> take the date from saw file and attach it to experiment times\n",
+    "date_str = saw[\"time\"].dropna().dt.normalize().min().strftime(\"%Y-%m-%d\")\n",
+    "exp[\"Timestamp Start\"] = pd.to_datetime(date_str + \" \" + exp[\"Timestamp Start\"].astype(str), errors=\"coerce\")\n",
+    "exp[\"Timestamp End\"]   = pd.to_datetime(date_str + \" \" + exp[\"Timestamp End\"].astype(str), errors=\"coerce\")\n",
+    "\n",
+    "# if end < start, assume experiment crosses midnight\n",
+    "m = exp[\"Timestamp End\"] < exp[\"Timestamp Start\"]\n",
+    "exp.loc[m, \"Timestamp End\"] += pd.Timedelta(days=1)\n",
+    "\n",
+    "# sort for merge_asof\n",
+    "exp = exp.sort_values(\"Timestamp Start\")\n",
+    "saw = saw.sort_values(\"time\")\n",
+    "\n",
+    "# interval labeling: assign each saw row the latest experiment start at/before its time\n",
+    "tmp = pd.merge_asof(\n",
+    "    saw,\n",
+    "    exp[[\"Timestamp Start\", \"Timestamp End\", \"Experiment No\", \"Piece No\", \"Material\"]],\n",
+    "    left_on=\"time\",\n",
+    "    right_on=\"Timestamp Start\",\n",
+    "    direction=\"backward\"\n",
+    ")\n",
+    "\n",
+    "# keep metadata only if time is inside [start, end]\n",
+    "inside = (tmp[\"time\"] >= tmp[\"Timestamp Start\"]) & (tmp[\"time\"] <= tmp[\"Timestamp End\"])\n",
+    "\n",
+    "# fill for non-matching rows\n",
+    "tmp.loc[~inside, [\"Experiment No\", \"Piece No\"]] = -1\n",
+    "tmp.loc[~inside, \"Material\"] = \"Empty\"\n",
+    "\n",
+    "# ensure integer dtypes in final output\n",
+    "# (use to_numeric to be safe, then cast to int)\n",
+    "tmp[\"Experiment No\"] = pd.to_numeric(tmp[\"Experiment No\"], errors=\"coerce\").fillna(-1).astype(int)\n",
+    "tmp[\"Piece No\"]      = pd.to_numeric(tmp[\"Piece No\"], errors=\"coerce\").fillna(-1).astype(int)\n",
+    "\n",
+    "# also force these saw columns to int (rounded/truncated via astype after numeric conversion)\n",
+    "for col in [\"bandVelocityActual\", \"feedRateActual\"]:\n",
+    "    if col in tmp.columns:\n",
+    "        tmp[col] = pd.to_numeric(tmp[col], errors=\"coerce\").fillna(0).astype(int)\n",
+    "\n",
+    "# drop helper columns and save\n",
+    "out = tmp.drop(columns=[\"Timestamp Start\", \"Timestamp End\"])\n",
+    "out.to_csv(out_path, index=False)\n",
+    "\n",
+    "out.head()\n"
    ]
   }
  ],
