Simon's file added

--- a/surrogateML.ipynb
+++ b/surrogateML.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6a820cc8",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "69deb9c0",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
      "text": [
       "Starting export of 'saw'...\n",
       "Fetching rows 0 to 1000000...\n",
-      "CRITICAL ERROR at offset 0: Error while executing query: Flight returned unavailable error, with message: failed to connect to all addresses; last error: UNKNOWN: ipv4:10.65.1.77:10102: tcp handshaker shutdown. gRPC client debug context: UNKNOWN:Error received from peer  {grpc_message:\"failed to connect to all addresses; last error: UNKNOWN: ipv4:10.65.1.77:10102: tcp handshaker shutdown\", grpc_status:14, created_time:\"2026-01-04T13:03:48.451546+01:00\"}. Client context: IOError: Server never sent a data message. Detail: Internal\n",
+      "CRITICAL ERROR at offset 0: Error while executing query: Flight returned unavailable error, with message: failed to connect to all addresses; last error: UNKNOWN: ipv4:10.65.1.77:10102: tcp handshaker shutdown. gRPC client debug context: UNKNOWN:Error received from peer  {created_time:\"2026-01-04T21:28:30.562623+01:00\", grpc_status:14, grpc_message:\"failed to connect to all addresses; last error: UNKNOWN: ipv4:10.65.1.77:10102: tcp handshaker shutdown\"}. Client context: IOError: Server never sent a data message. Detail: Internal\n",
       "No data was retrieved.\n"
      ]
     }
